# tool-google-calendar

./: pyproject.toml
docs/: prd.md
src/: __init__.py  config.py  lib.py  utils.py
tests/: conftest.py  test_integration.py  test_openai_function_calling.py
tests/data/: tools-inline-json.yaml  tools-multiple-tools.yaml  tools.yaml
