[project]
name = "tool-google-calendar"
version = "0.1.0"
description = "Ahnopologetic tools - Google Calendar"
authors = [
    {name = "ahnopologetic", email = "stahn1995@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "pyyaml (>=6.0.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
ruff = "^0.9.2"
openai = "^1.59.9"
pytest-mock = "^3.14.0"


